[package]
name = "cargo-renew"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
owo-colors = "4.1.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "default-tls", "http2", "json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
